--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "@hot-loader/react-dom": "^16.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-loader": "^8.0.6",
     "http-proxy-middleware": "^0.20.0",
     "react-app-rewired": "^2.1.5",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-hot-loader": "^4.12.19",
     "serve": "^11.2.0"
   },
   "scripts": {
