--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@testing-library/user-event": "^7.1.2",
     "babel-loader": "^8.0.6",
     "http-proxy-middleware": "^0.20.0",
-    "react-app-rewired": "^2.1.5",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.2",
+    "prettier": "^1.19.1",
     "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.5",
     "react-hot-loader": "^4.12.19",
     "serve": "^11.2.0"
   },
@@ -34,7 +37,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "./node_modules/.bin/prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": "react-app"
