--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.8.0",
     "http-proxy-middleware": "^0.20.0",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.2",
