--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -26,13 +26,14 @@
     "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "http-proxy-middleware": "^0.20.0",
-    "husky": "^4.2.1",
+    "husky": "^4.2.5",
     "lint-staged": "^10.0.2",
     "prettier": "^1.19.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
     "react-hot-loader": "^4.12.19",
-    "serve": "^11.2.0"
+    "serve": "^11.2.0",
+    "snyk": "^1.323.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -40,7 +41,8 @@
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "prettier": "./node_modules/.bin/prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "eslint": "npx eslint . --fix"
+    "eslint": "npx eslint . --fix",
+    "snyk": "./node_modules/.bin/snyk test"
   },
   "eslintConfig": {
     "extends": "react-app"
