--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run-script snyk && npm test && npm run-script build"
+      "pre-push": "npm run-script snyk && npm test --watchAll=false && npm run-script build"
     }
   },
   "eslintConfig": {
