--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "prop-types": "^15.7.2",
+    "proptypes": "^1.1.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -46,7 +47,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run-script snyk && npm test --watchAll=false && npm run-script build"
+      "pre-push": "npm run-script snyk && npm test --watchAll=false && npm run-script eslint"
     }
   },
   "eslintConfig": {
