--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "http-proxy-middleware": "^0.20.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.0.2",
