--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-prettier": "^3.1.3",
     "http-proxy-middleware": "^0.20.0",
     "husky": "^4.2.5",
@@ -37,13 +38,14 @@
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
     "react-hot-loader": "^4.12.19",
+    "redux-mock-store": "^1.5.4",
     "serve": "^11.2.0",
     "snyk": "^1.323.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "export CI=true && react-app-rewired test",
     "eject": "react-scripts eject",
     "prettier": "./node_modules/.bin/prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "eslint": "npx eslint . --fix",
@@ -68,5 +70,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "config$": "<rootDir>/__mocks__/configMock.js"
+    }
   }
 }
