--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run-script snyk && npm test --watchAll=false && npm run-script eslint"
+      "pre-commit": "npm run-script snyk",
+      "pre-push": "npm test --watchAll=false && npm run-script eslint"
     }
   },
   "eslintConfig": {
